<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="id">ID</string>
    <string name="vk">ВКонтакте</string>
    <string name="inst">Instagram</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="no_data">Нет данных</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="profile_edit">Редактирование профиля</string>
    <string name="name">Имя</string>
    <string name="birthday">Дата рождения</string>
    <string name="city">Город</string>
    <string name="vk_link">Ссылка на ВКонтакте</string>
    <string name="instagram">Ссылка на Instagram</string>
    <string name="status">Статус</string>
    <string name="storage_denied">Использование хранилища запрещено</string>
    <string name="upload_from">Выбрать фото из:</string>
    <string name="take_photo">Сделать фото</string>
    <string name="upload_from_gallery">Выбрать из галереи</string>
    <string name="upload_avatar">Загрузить аватар</string>
    <string name="save">Сохранить</string>
    <string name="username">Имя пользователя</string>
    <string name="phone">Телефон</string>
    <string name="select_birthday_date">Выберите даду рождения</string>
    <string name="field_necessarily">Это поле обязательно</string>
    <string name="retry_letter">Произошла ошибка. Повторите позже</string>
    <string name="not_found">Не найдено</string>
    <string name="capricorn">Козерог</string>
    <string name="aquarius">Водолей</string>
    <string name="pisces">Рыбы</string>
    <string name="aries">Овен</string>
    <string name="taurus">Телец</string>
    <string name="gemini">Близнецы</string>
    <string name="cancer">Рак</string>
    <string name="leo">Лев</string>
    <string name="virgo">Дева</string>
    <string name="libra">Весы</string>
    <string name="scorpio">Скорпион</string>
    <string name="sagittarius">Стрелец</string>
    <string name="error">Произошла ошибка. Повторите попытку позже</string>
</resources>