<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/profile_edit"
            android:textSize="25sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="30dp"
                android:scaleType="centerCrop"
                android:src="@color/cardview_dark_background" />

            <Button
                android:id="@+id/upload_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/upload_avatar" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:clickable="false"
            android:layout_height="wrap_content"
            android:hint="@string/username">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:clickable="false"
                android:focusable="false"
                android:cursorVisible="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:clickable="false"
            android:layout_height="wrap_content"
            android:hint="@string/phone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:clickable="false"
                android:focusable="false"
                android:cursorVisible="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:hint="@string/birthday">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:hint="@string/city">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:hint="@string/vk_link">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:hint="@string/instagram">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:hint="@string/status">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>