<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:elevation="12dp"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@color/cardview_dark_background" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="Nickname"
                    android:textSize="25sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="16dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/id"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="10dp"
                                android:text="125"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/cardview_dark_background" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/vk"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:src="@drawable/ic_vk" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="8dp"
                                android:text="@string/vk"
                                android:textSize="18sp" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/cardview_dark_background" />


                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/inst"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:src="@drawable/ic_inst" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="8dp"
                                android:text="@string/inst"
                                android:textSize="18sp" />
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="15dp"
                            android:src="@drawable/ic_phone" />

                        <TextView
                            android:id="@+id/phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Телефон"
                            android:textSize="25sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="15dp"
                            android:src="@drawable/ic_location" />

                        <TextView
                            android:id="@+id/city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Город"
                            android:textSize="25sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="15dp"
                            android:src="@drawable/ic_birthday" />

                        <TextView
                            android:id="@+id/birthday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="День рождения"
                            android:textSize="25sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="15dp"
                            android:src="@drawable/ic_horoscope" />

                        <TextView
                            android:id="@+id/horoscope"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Знак зодиака"
                            android:textSize="25sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <Button
                        android:id="@+id/edit_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:text="@string/edit_profile" />

                    <Button
                        android:id="@+id/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/logout" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </FrameLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_indicator"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>
</ScrollView>